(lang dune 3.2)

(name ocaml_project)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Jay Dev Jha")

(maintainers "Jay Dev Jha")

(license LICENSE)



(package
 (name ocaml_project)
 (synopsis "A simple filter operation on a list")
 (description "A filter operation on a list in OCaml with test cases")
 (depends ocaml dune)
 )

