opam-version: "2.0"
synopsis: "A simple filter operation on a list"
description: "A filter operation on a list in OCaml with test cases"
maintainer: ["Jay Dev Jha"]
authors: ["Jay Dev Jha"]
license: "LICENSE"
homepage: "https://github.com/IIITM-Jay/filterListOcaml"
bug-reports: "https://github.com/IIITM-Jay/filterListOcaml/issues"
depends: [
  "ocaml"
  "dune" {>= "3.2"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/IIITM-Jay/filterListOcaml.git"
